--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">Chucker Sample</string>
+    <string name="interceptor_type"><a href="https://square.github.io/okhttp/interceptors/">Interceptor type</a>:</string>
+    <string name="application_type">Application</string>
+    <string name="network_type">Network</string>
     <string name="do_http_activity">Do HTTP activity</string>
     <string name="launch_chucker_directly">Launch Chucker directly</string>
 
