--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -6,7 +6,8 @@
     <string name="do_http_activity">Do HTTP activity</string>
     <string name="do_graphql_activity">Do GraphQL activity</string>
     <string name="launch_chucker_directly">Launch Chucker directly</string>
-    <string name="export_to_file">Export to file</string>
+    <string name="export_to_file">Export to LOG file</string>
+    <string name="export_to_file_har">Export to HAR file</string>
     <string name="export_to_file_failure">Failed to export to file</string>
     <string name="export_to_file_success">Transactions exported to: %s</string>
 
