Initial commit to migrate from xml to compose.

--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="export_to_file_har">Export to HAR file</string>
     <string name="export_to_file_failure">Failed to export to file</string>
     <string name="export_to_file_success">Transactions exported to: %s</string>
+    <string name="interceptor_url">https://square.github.io/okhttp/interceptors/</string>
 
 
     <string name="intro_title">Welcome to Chucker Sample App</string>
